[tool.poetry]
name = "parser-comb"
version = "0.1.0"
description = "Parser combinator examples"
authors = ["y"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
parsec = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
